@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-22T01:59:39Z",
+  "timestamp" : "2022-11-22T16:31:16Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 647,
-  "uniques" : 408,
+  "count" : 648,
+  "uniques" : 409,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-11-21T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
